# Rust_meme_api

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  RAILWAY_DEPLOY.md  README.md  REWARDS_SETUP.md  SETUP.md  railway.json
contracts/: .env  README.md  hardhat.config.js  package-lock.json  package.json
contracts/artifacts/@openzeppelin/contracts/access/Ownable.sol/: Ownable.dbg.json
contracts/artifacts/@openzeppelin/contracts/utils/cryptography/MerkleProof.sol/: MerkleProof.dbg.json
contracts/artifacts/contracts/MemeRewards.sol/: MemeRewards.dbg.json  MemeRewards.json
contracts/cache/: solidity-files-cache.json
contracts/contracts/: MemeRewards.sol
contracts/scripts/: deploy.js
frontend/: .env.local.example  README.md  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/api/auth/[...nextauth]/: route.ts
frontend/src/app/auth/signin/: page.tsx
frontend/src/app/memes/[id]/: page.tsx
frontend/src/app/profile/: page.tsx
frontend/src/app/upload/: page.tsx
frontend/src/components/: header.tsx  meme-card.tsx  providers.tsx
frontend/src/lib/: api.ts  contract.ts  wagmi.ts
src/: main.rs  server.rs
src/config/: database.rs
src/data/: meme_data.rs  mod.rs  seed.rs  user_data.rs
src/models/: meme.rs  mod.rs  user.rs
