[package]
name = "Rust_meme_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = {version = "2.0.4", features = ["postgres", "chrono", "sqlite", "r2d2"] }
dotenv = "0.15.0"
bcrypt = "0.15.0"
r2d2 = "0.8.9"
actix-web = "4.3.0" # Use the latest version
serde = { version = "1.0", features = ["derive"] }